# mcp_office

./: .ruff.toml  GIT_COMMIT_GUIDE.md  INTEGRATION_COMPLETE_REPORT.md  PROJET_FINAL_RAPPORT.md  README.md  TODO.md  UNIFORMISATION_REPORT.md  VALIDATION_FINALE_COMPLETE.md  VALIDATION_RUFF_COMPLETE.md  WINDOWS_SETUP.md  add_outlook_to_configs.py  analyze_all_services.py  analyze_coverage.py  auto_commit.py  check_final_coverage.py  check_quality.py  clean_server.py  commit_outlook.bat  commit_outlook.ps1  configure_outlook_methods.py  coverage_analysis.txt  diagnose_tests.py  extract_outlook_config.py  final_coverage_analysis.txt  fix_mock_issues.py  fix_remaining_issues.py  generate_complete_server.py  generate_configs.py  generate_docs.py  list_outlook_methods.py  outlook_config_extracted.txt  outlook_methods_config.json  outlook_methods_list.txt  pyproject.toml  radon_complexity_report.md  requirements.txt  ruff_normalization_final_report.md  ruff_normalization_report.md  run_coverage.py  run_safe_tests.py  (+14 more)
config/: claude_desktop_config.json
docs/: api_reference.md  installation.md  troubleshooting.md  user_guide.md
integration_tests/: test_excel_integration.py  test_outlook_integration.py  test_powerpoint_integration.py  test_word_integration.py
scripts/: install.ps1  start_server.ps1
src/: server.py  server.py.backup  server_handlers_outlook.py  server_part1.py  tools_configs.py
tests/: conftest.py  test_com_wrapper.py  test_excel_service.py  test_exceptions.py  test_helpers.py  test_outlook_extended.py  test_outlook_service.py  test_powerpoint_service.py  (+4 more)
(+17 files in other folders)
